# pico-fastapi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  manage.sh  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: architecture.md  faq.md  getting-started.md  index.md  llms.txt  migration.md  requirements.txt  skills.md  troubleshooting.md  tutorial.md
docs/explanation/: test-suite.md
docs/how-to/: cors.md  index.md  migrating-from-fastapi.md  session-cart.md  settings-applied.md  testing.md  websocket-chat.md  websocket.md
docs/reference/: config.md  exceptions.md  index.md
docs/user-guide/: configurers.md  index.md
examples/rest-api/: README.md  application.yaml  requirements.txt
examples/rest-api/myapp/: config.py  controllers.py  main.py  services.py
releases/: v0.2.0.md
src/pico_fastapi/: __init__.py  config.py  decorators.py  exceptions.py  factory.py  middleware.py
tests/: conftest.py  test_config.py  test_configurer_priority.py  test_coverage_boost_v2.py  test_decorators.py  test_exceptions.py  test_exports.py  test_factory.py  test_http_admin.py  test_marker_propagation.py  test_middleware.py  test_session_cart.py  test_settings_applied.py  test_websocket_chat.py
