[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-fastapi"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "Pico-ioc integration for FastAPI. Adds Spring Boot-style controllers, autoconfiguration, and scopes (request, websocket, session)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ioc", 
    "di", 
    "dependency injection", 
    "fastapi", 
    "inversion of control", 
    "spring boot",
    "controller"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pico-ioc >= 2.2.0",
    "fastapi >= 0.100"
]

[project.optional-dependencies]
session = ["starlette-session"]
run = ["uvicorn[standard]"]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-fastapi"
Repository = "https://github.com/dperezcabrera/pico-fastapi"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-fastapi/issues"
Documentation = "https://dperezcabrera.github.io/pico-fastapi/"
Changelog = "https://github.com/dperezcabrera/pico-fastapi/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_fastapi*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.2.0"
write_to = "src/pico_fastapi/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project.entry-points."pico_boot.modules"]
pico_fastapi = "pico_fastapi"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701", "E731", "F401", "F811", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"
